[package]
name = "jscjs_sys"
description = "Raw FFI bindings to Webkit's JavaScriptCore JavaScript engine."
repository = "https://github.com/drtychai/jsc-sys"
version = "0.0.3"
authors = [ "bynx <drtychai@protonmail.com>" ]
license = "AGPL-3.0"
edition = "2018"
build = "build.rs"
exclude = ["**/WebKit"] 

[lib]
name = "jscjs_sys"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies.url]
version = "2.2.2"

[dependencies.cxx]
version = "1.0"

[build-dependencies.bindgen]
version = "0.59.1"

[build-dependencies.cxx-build]
version = "1.0"
